--- a/package.json
+++ b/package.json
@@ -5,7 +5,12 @@
   "dependencies": {
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
-    "react-scripts": "2.0.5"
+    "react-scripts": "2.0.5",
+    "fs-extra": "^7.0.0",
+    "ipfs-api": "^24.0.0",
+    "react-bootstrap": "^0.32.3",
+    "react-router-dom": "^4.3.1",
+    "web3": "^1.0.0-beta.35"
   },
   "scripts": {
     "start": "react-scripts start",
