--- a/package.json
+++ b/package.json
@@ -1,20 +1,29 @@
 {
   "name": "ipfs-game-uploader",
+  "homepage": "",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "react": "^16.5.2",
-    "react-dom": "^16.5.2",
-    "react-scripts": "2.0.5",
     "fs-extra": "^7.0.0",
     "ipfs-api": "^24.0.0",
+    "node-sass-chokidar": "^1.3.4",
+    "npm-run-all": "^4.1.3",
+    "react": "^16.5.2",
     "react-bootstrap": "^0.32.3",
+    "react-dom": "^16.5.2",
+    "react-helmet": "^5.2.0",
     "react-router-dom": "^4.3.1",
+    "react-scripts": "2.0.5",
+    "react-snap": "^1.19.0",
     "web3": "^1.0.0-beta.35"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build-css": "node-sass-chokidar --include-path ./src --include-path ./node_modules src/ -o src/",
+    "watch-css": "npm run build-css && node-sass-chokidar --include-path ./src --include-path ./node_modules src/ -o src/ --watch --recursive",
+    "start-js": "react-scripts start",
+    "start": "npm-run-all -p watch-css start-js",
+    "build-js": "react-scripts build",
+    "build": "npm-run-all build-css build-js",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
