--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ipfs-game-uploader",
-  "homepage": "",
+  "homepage": "./",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -18,12 +18,16 @@
     "web3": "^1.0.0-beta.35"
   },
   "scripts": {
-    "build-css": "node-sass-chokidar --include-path ./src --include-path ./node_modules src/ -o src/",
     "watch-css": "npm run build-css && node-sass-chokidar --include-path ./src --include-path ./node_modules src/ -o src/ --watch --recursive",
-    "start-js": "react-scripts start",
+    "start-js": "set PORT=3000 && react-scripts start",
     "start": "npm-run-all -p watch-css start-js",
+
+    "build-css": "node-sass-chokidar --include-path ./src --include-path ./node_modules src/ -o src/",
     "build-js": "react-scripts build",
     "build": "npm-run-all build-css build-js",
+    "snap": "react-snap",
+    "prod": "set PORT=80 && serve -s build",
+
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
