--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@requestnetwork/request-network.js": "^0.9.0",
     "fs-extra": "^7.0.0",
     "ipfs-api": "^24.0.0",
     "node-sass-chokidar": "^1.3.4",
@@ -21,13 +22,11 @@
     "watch-css": "npm run build-css && node-sass-chokidar --include-path ./src --include-path ./node_modules src/ -o src/ --watch --recursive",
     "start-js": "set PORT=3000 && react-scripts start",
     "start": "npm-run-all -p watch-css start-js",
-
     "build-css": "node-sass-chokidar --include-path ./src --include-path ./node_modules src/ -o src/",
     "build-js": "react-scripts build",
     "build": "npm-run-all build-css build-js",
     "snap": "react-snap",
     "prod": "set PORT=80 && serve -s build",
-
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
