--- a/package.json
+++ b/package.json
@@ -7,15 +7,12 @@
     "@requestnetwork/request-network.js": "^0.9.0",
     "fs-extra": "^7.0.0",
     "ipfs-api": "^24.0.0",
-    "node-sass-chokidar": "^1.3.4",
-    "npm-run-all": "^4.1.3",
     "react": "^16.6.0",
     "react-bootstrap": "^0.32.3",
     "react-dom": "^16.6.0",
     "react-helmet": "^5.2.0",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.0.5",
-    "react-snap": "^1.19.0",
     "web3": "^1.0.0-beta.36"
   },
   "scripts": {
@@ -27,9 +24,11 @@
     "build": "npm-run-all build-css build-js",
     "snap": "react-snap",
     "prod": "set PORT=80 && serve -s build",
-    "test": "react-scripts test",
+    "test:mocha": "mocha --bail --recursive -t 500000",
+    "test": "npm-run-all test:mocha",
     "eject": "react-scripts eject",
-    "ipfs": "node scripts/upload-to-ipfs.js"
+    "ipfs": "node scripts/upload-to-ipfs.js",
+    "sleepy": "sleep 5"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -39,5 +38,14 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "devDependencies": {
+    "chai": "^4.2.0",
+    "chromedriver": "^2.43.1",
+    "geckodriver": "^1.12.2",
+    "mocha": "^5.2.0",
+    "node-sass-chokidar": "^1.3.4",
+    "npm-run-all": "^4.1.3",
+    "selenium-webdriver": "^4.0.0-alpha.1"
+  }
 }
