--- a/package.json
+++ b/package.json
@@ -21,10 +21,10 @@
     "start": "npm-run-all -p watch-css start-js",
     "ganache": "ganache-cli",
     "deploy:smartcontract": "node test/utils/smartcontract-utils.js",
-    "test:mocha": "mocha --bail -t 500000",
+    "test:mocha": "mocha --bail --recursive -t 500000",
     "test:dev": "npm-run-all deploy:smartcontract test:mocha",
     "test:serve": "set PORT=3000 && serve -s build",
-    "test:build" : "npm-run-all build test:serve",
+    "test:build": "npm-run-all build test:serve",
     "test:setup:run": "parallelshell \"npm run ganache\" \"npm run deploy:smartcontract\" \"sleep 10 && npm run test:build\" \"sleep 45 && npm run test:mocha\"",
     "test": "npm run test:setup:run",
     "build-css": "node-sass-chokidar --include-path ./src --include-path ./node_modules src/ -o src/",
@@ -54,7 +54,6 @@
     "parallelshell": "^3.0.2",
     "selenium-webdriver": "^4.0.0-alpha.1",
     "serve": "^10.0.2",
-    "shell-parallel": "^1.0.3",
     "solc": "^0.4.25"
   }
 }
