completed test framework

--- a/package.json
+++ b/package.json
@@ -20,8 +20,8 @@
     "start-js": "set PORT=3000 && react-scripts start",
     "start": "npm-run-all -p watch-css start-js",
     "ganache": "ganache-cli",
-    "deploy:smartcontract": "node test/utils/smartcontract-utils.js",
-    "test:mocha": "mocha --bail --recursive -t 500000",
+    "deploy:smartcontract": "node test/utils/deployer/smartcontract-deployer.js",
+    "test:mocha": "mocha --bail -t 500000",
     "test:dev": "npm-run-all deploy:smartcontract test:mocha",
     "test:serve": "set PORT=3000 && serve -s build",
     "test:build": "npm-run-all build test:serve",
