--- a/package.json
+++ b/package.json
@@ -11,9 +11,13 @@
     "react-bootstrap": "^0.32.3",
     "react-dom": "^16.6.0",
     "react-helmet": "^5.2.0",
+    "react-redux": "^5.1.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.0.5",
-    "web3": "^1.0.0-beta.36"
+    "redux": "^4.0.1",
+    "redux-thunk": "^2.3.0",
+    "web3": "^1.0.0-beta.36",
+    "xtend": "^4.0.1"
   },
   "scripts": {
     "watch-css": "npm run build-css && node-sass-chokidar --include-path ./src --include-path ./node_modules src/ -o src/ --watch --recursive",
