--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-bootstrap": "^0.32.3",
     "react-dom": "^16.6.0",
     "react-helmet": "^5.2.0",
+    "react-particle-animation": "^1.0.1",
     "react-redux": "^5.1.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.0.5",
