--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-redux": "^5.1.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.0.5",
+    "reactjs-popup": "^1.3.1",
     "redux": "^4.0.1",
     "redux-form": "^7.4.2",
     "redux-thunk": "^2.3.0",
